Fix up vertical spacing between sections

--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -47,7 +47,8 @@ $line-height-primary: 1.3;
  * Baseline grid
  */
 $blg-space-extra-small-in-px: 12;
-$blg-space-small-in-px: 24;
+$blg-space-small-in-px: $blg-space-extra-small-in-px * 2;
+$blg-space-smallish-in-px: $blg-space-small-in-px * 1.5;
 $blg-space-medium-in-px: $blg-space-small-in-px * 2;
 $blg-space-large-in-px: $blg-space-small-in-px * 3;
 
