--- a/assets/sass/patterns/atoms/section-listing-link.scss
+++ b/assets/sass/patterns/atoms/section-listing-link.scss
@@ -7,7 +7,6 @@
   font-family: $font-secondary;
   @include font-size($font-size-base-in-px);
   line-height: 1.5;
-  @include margin($blg-space-small-in-px, "bottom");
   @include padding($blg-space-extra-small-in-px - 1 0 $blg-space-extra-small-in-px);
   text-align: center;
   text-decoration: none;
